corrected slider arrow color
can't increase size without throwing off centering rn

--- a/css/app.css
+++ b/css/app.css
@@ -351,3 +351,18 @@ body {
 .clamp-slider {
     color: black;
 }
+
+#volunteeringDiv div p {
+    text-align: center;
+    font-weight: bold;
+}
+
+#volunteeringDiv div:hover {
+    opacity: .5;
+}
+
+.center-bold {
+    text-align: center;
+    font-weight: bold;
+}
+
