--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -71,7 +71,8 @@
     line-height: 1;
 
     opacity: .75;
-    color: white;
+    color: grey;
+    /* change color of arrows*/
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
